--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
 layout: home
 background: '/img/bg-index.jpg'
 ---
+
+<p>Hello, world!</p>
+
+<p>I am studying Math and Computer Science (B.Sc) at McGill University in Montreal, QC. Right now I'm still trying to figure out what to write about, and I will update this website when I get some more ideas. Until then, stay tuned.</p>
