--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@ background: '/img/bg-index.jpg'
 
   <blockquote class="blockquote">
   Remember to look up at the stars and not down at your feet. Try to make sense of what you see and wonder about what makes the universe exist. Be curious. And however difficult life may seem, there is always something you can do and succeed at. It matters that you don’t just give up.
-  </blockquote>
+</blockquote> -Stephen Hawking
 
-(Stephen Hawking)</p>
+</p>
