--- a/about.html
+++ b/about.html
@@ -4,9 +4,7 @@ title: About
 background: '/img/bg-index.jpg'
 ---
 
-<p>I like to put what I learned into practice. For projects I’m working on, visit my GitHub page. As for resume I am building up, visit my LinkedIn page.</p>
-
-<p>I would also like to share my favorite quote of all time:</p>
+<p>I would just like to share my favorite quote of all time:</p>
 
 <p class="mb-5">
 
