--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ form: true
 ---
 
 <address>
-<p>I am a student at McGill University. If you want to get in touch, feel free to reach out to my <a href="mailto:cindywang3299@gmail.com">McGill email</a>. Or you can just fill out the form below to send me a message, and I will get back to you as soon as possible!</p>
+<p>I am a student at McGill University. If you want to get in touch, you can just fill out the form below to send me a message, and I will get back to you as soon as possible!</p>
 </address>
 
 <form name="sentMessage" id="contactForm" novalidate>
