--- a/index.html
+++ b/index.html
@@ -5,4 +5,12 @@ background: '/img/bg-index.jpg'
 
 <p>Hello, world!</p>
 
-<p>I am studying Math and Computer Science (B.Sc) at McGill University in Montreal, QC. Right now I'm still trying to figure out what to write about, and I will update this website when I get some more ideas. Until then, stay tuned.</p>
+<p>
+I am in my second year studying Software Engineering (B.Sc) at McGill University in Montreal, Quebec.
+
+Here you will find a person who adores technology and life, and makes things interesting.
+
+Lately I've been cooking up interesting projects solo and with friends, writing about my fields of interests,
+or on my next journey of exploring a new corner of the world... You will see!
+
+</p>
