--- a/about.html
+++ b/about.html
@@ -4,14 +4,9 @@ title: About
 background: '/img/bg-index.jpg'
 ---
 
-<p>I like to put what I learned into practice. For projects I’m working on, visit my GitHub page. As for resume I am building up, visit my LinkedIn page.</p>
-
-<p>I would also like to share my favorite quote of all time:</p>
-
+<p>I would just like to share my favorite quote of all time:</p>
 <p class="mb-5">
-
   <blockquote class="blockquote">
   Remember to look up at the stars and not down at your feet. Try to make sense of what you see and wonder about what makes the universe exist. Be curious. And however difficult life may seem, there is always something you can do and succeed at. It matters that you don’t just give up.
-</blockquote> -Stephen Hawking
-
+  </blockquote> -Stephen Hawking
 </p>
